--- a/edge/static/css/edge/index.css
+++ b/edge/static/css/edge/index.css
@@ -3,6 +3,10 @@
     border-bottom: solid 1px darkgray;
 }
 
+#positive-pane {
+    border-right: solid 2px darkgray;
+}
+
 #student-select-holder {
     margin-top: 20px;
 }
@@ -11,14 +15,24 @@
     display: inline-block;
 }
 
-#positive-pane {
-    background: lightgreen;
+#title-row {
+    padding-top: 20px;
+    font-size: 18px;
 }
 
-#negative-pane {
-    background: lightcoral;
+.insufficient-data {
+    margin-top: 50px;
 }
 
-#note {
-    padding: 10px;
+#category-scores {
+    padding: 20px;
+}
+
+#category-scores .score {
+    font-size: 20px;
+    border-radius: 5px;
+}
+
+#category-scores .score > span {
+    font-size: 15px;
 }
