--- a/core/templates/authenticated/assignments_table/base.html
+++ b/core/templates/authenticated/assignments_table/base.html
@@ -6,7 +6,7 @@
 
     <div class="scroll">
         <table id="{% block table_id %}{% endblock table_id %}"
-               class="assignment_table table table-condensed table-striped table-hover" cellspacing='0'>
+               class="assignment_table table table-condensed table-striped" cellspacing='0'>
             <!-- Table Header -->
             <thead>
             <tr>
