--- a/core/templates/authenticated/reportcard/base.html
+++ b/core/templates/authenticated/reportcard/base.html
@@ -2,7 +2,8 @@
 <span>{% block reportcard_help_tip %}{% endblock reportcard_help_tip %}</span>
 
 <div class="row">
-    <table class="reportcard" id="{% block reportcard_table_id %}{% endblock reportcard_table_id %}">
+    <table class="reportcard table table-condensed table-striped"
+           id="{% block reportcard_table_id %}{% endblock reportcard_table_id %}">
     <thead>
     {% block reportcard_table_head %}{% endblock reportcard_table_head %}
     </thead>
