copyright labels updated

--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -2,8 +2,8 @@
 
 <div class="container-fluid">
 	<div class="navbar-header">
-        <a title="Return to home page" class='indented_body_right navbar-brand' href="{% url 'index' %}">&copy;
-            HomeWork Central 2015</a>
+        <a title="Return to home page" class='indented_body_right navbar-brand' href="{% url 'index' %}">&copy; 2016
+            Homework Central</a>
 	</div>
 
     <ul class='navbar-right nav navbar-nav footer'>
