copyright year auto-updates

--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -2,7 +2,8 @@
 
 <div class="container-fluid">
 	<div class="navbar-header">
-        <a title="Return to home page" class='indented_body_right navbar-brand' href="{% url 'index' %}">&copy; 2016
+        <a title="Return to home page" class='indented_body_right navbar-brand'
+           href="{% url 'index' %}">&copy; {% now "Y" %}
             Homework Central</a>
 	</div>
 
