--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -184,7 +184,7 @@
         <div id="horizontaldiv5" class="horizontaldiv">
             <a title="Click here to email us!" href="mailto:contact@hwcentral.in" target="_top">contact@hwcentral.in</a> | <a title="Click here to call us!" href="tel:+919922498624">+91&nbsp;9922498624</a>
             <div style="font-size:20px; margin-top:20px;">
-                &copy; 2016 Homework Central
+                &copy; {% now "Y" %} Homework Central
             </div>  
          
         </div>
