--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -107,7 +107,9 @@
                     <div class="col-lg-6 col-lg-push-6">
                         <div class="vid-holder">
                             <div class="embed-responsive embed-responsive-16by9">
-                            <iframe id="iframe-vid" class="embed-responsive-item" src="https://www.youtube.com/embed/kV6JpsKUfLo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                                <iframe id="iframe-vid" class="embed-responsive-item"
+                                        src="https://www.youtube.com/embed/lzDRVqncPzQ?rel=0&amp;showinfo=0"
+                                        frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
