--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -16,6 +16,7 @@
 {% endblock base_css %}
 
 {% block base_js %}
+    <script type="text/javascript" src="{% static "js/authenticated/img_reloader.js" %}"></script>
     <script type="text/javascript" src="{% static "js/dataTables.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/moment.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/datetime-moment.js" %}"></script>
