--- a/core/templates/authenticated/reportcard/classroom.html
+++ b/core/templates/authenticated/reportcard/classroom.html
@@ -13,7 +13,7 @@
     <tr>
         <th>Student</th>
         {% for subject in reportcard.subjects %}
-            <th>{{ subject.name }}</th>
+            <th>{{ subject }}</th>
         {% endfor %}
         <th>Aggregate</th>
     </tr>
