added school profiles

--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -64,7 +64,7 @@
 
                 <div id="landing_mid" style="">
                     <div style="margin-left:25px; width:90%;">
-                        <p>The online ecosystem to assign, evaluate and analyse homework assignments.</p> 
+                        <p>The adaptive online ecosystem to assign, evaluate and analyse homework assignments.</p>
 
                         <span id="removeable">
                             <img class="med-opacity" style="width:173px; height:170px; position:absolute; top:100px; left:30px;" src="{% static 'img/index/landing/assign.png' %}">
@@ -100,7 +100,9 @@
         <div id="horizontaldiv2" class="horizontaldiv">
             <div id="index_section1" class="index_section">
                 <div id="quick_intro">
-                    <p>Homework Central provides teachers with an online platform to assign, evaluate and analyse student homework. Automated correction and in-depth analytics allow schools to improve concept retention and learning outcomes for their students.</p> 
+                    <p>Homework Central provides teachers with an adaptive online platform to assign, evaluate and
+                        analyse student homework. Automated correction and in-depth analytics allow schools to improve
+                        concept retention and learning outcomes for their students.</p>
                     <div style="clear:both;"></div>
                 </div>
                 <div class="row">
@@ -167,9 +169,11 @@
                 <ul>
                     <li>Automated correction means no more repetitive, time consuming correction for teachers.</li>
                     <li>Advanced analytics identify student strengths and weaknesses and provide detailed insights.</li>
-                    <li>High quality questions target specific learning outcomes.</li>
+                    <li>High quality personalized questions target specific learning outcomes.</li>
                     <li>Statistical tools track class performance and identify areas of improvement.</li>
-                    <li>Personalised questions and plagiarism detection prevent student copying.</li>
+                    <li>Plagiarism detection and formulaic questions prevent student copying and allow for unlimited
+                        practice.
+                    </li>
                     <li>Auto-generated report cards and a dedicated parent interface facilitate parent-school interaction.</li>
                 </ul>
             </div>   
