--- a/core/templates/authenticated/home/admin.html
+++ b/core/templates/authenticated/home/admin.html
@@ -8,8 +8,9 @@
 
 {% block home_body %}
     <div class='row'>
-        <div id="ribbon">
-            {% include "authenticated/widgets/announcement_create.html" only %}
+        <div id="ribbon" class="row">
+            {% include "authenticated/widgets/ribbon_buttons/announcement_create.html" only %}
+            {% include "authenticated/widgets/ribbon_buttons/advanced_analytics.html" only %}
         </div>
         <!-- Teachers Div -->
         {% include "authenticated/widgets/classrooms_table.html" with classrooms_table=vm.authenticated_body.classrooms_table only %}
